add test plugins and update backend + ui
